--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <body>
 
     <div class="hero">
-        <img src="ai-robot.png" alt="">
+        <img src="https://sodjac.github.io/robot/ai-robot.png" alt="">
         <div class="white">
             <span>R</span>
             <span>O</span>
